@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 16, 2009</p>
+      <p>Last Updated: December 17, 2009</p>
     </td>
   </tr>
 </table>
@@ -1626,7 +1626,12 @@ nuttx-2010.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Changed ALL references to non-standard fixed-size types (like uint32,
 	  ubyte, etc.) to standard types (like uint32_t, uint8_t, etc.) from
 	  stdint.h.  Use type bool and {true, false} from stdbool.  This effected
-	  most of the files in the system!
+	  most of the files in the system!  Almost all configurations have been
+	  re-built and many have been re-verified in order to get confidence in
+	  these changes.
+	* graphics/ and examples/nx - Fix numerous build errors that have been
+	  introduced lately.  NXGL has suffered some bit-rot from not being used
+	  in some of the most recent ports.
 
 pascal-2010.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
